--- a/.drone.yml
+++ b/.drone.yml
@@ -1,1 +1,14 @@
 # Drone yaml
+---
+kind: pipeline
+type: exec
+name: default
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+- name: greeting
+  commands:
+  - echo hello world
