--- a/.drone.yml
+++ b/.drone.yml
@@ -1,13 +1,11 @@
----
 kind: pipeline
-type: exec
+type: kubernetes
 name: default
 
-platform:
-  os: linux
-  arch: amd64
-
 steps:
-- name: greeting
+- name: test
+  image: gcc
   commands:
-  - echo hello world
+  - ./configure
+  - make
+  - make test
