--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,6 @@ steps:
 - name: test
   image: hashicorp/terraform:latest
   commands:
-  - env|sort
-  - echo "FOO is ${FOO}"
-  - terraform show
+  - terraform init -backend-config="storage_account_name=tfstorageale" -backend-config="container_name=tfstate" -backend-config="access_key=2EbthdKe7sRB4PY9gTQu5EYkk6vAmzjKK7hWdkMC9nHellt+eVpttjdKs114OtpMywp4tRvj4wCDUOJJrxM8vA==" -backend-config="key=codelab.microsoft.tfstate"
+ 
 
